# smuggler

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  TODO  cabal.project  smuggler.cabal  stack-alpha.yaml  stack-mac-8.6.1.yaml  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
src/: Prelude.txt  Smuggler.hs
src/Smuggler/: Anns.hs  Debug.hs  Export.hs  Exports.hs  Import.hs  Loc.hs  Modules.hs  Name.hs  Options.hs  Parser.hs  Plugin.hs
test/: Test.hs  input.hs
test/Test/: BoolBoolUnused.golden  BoolBoolUnused.hs  BoolBoolUsed.golden  BoolPartlyUsedFirst.golden  BoolPartlyUsedFirst.hs  BoolPartlyUsedLast.golden  BoolPartlyUsedLast.hs  ConstructorsUnused.golden  ConstructorsUnused.hs  Dummy.hs  ExportExplicit.hs  ExportImplicit.hs  ImplicitImportUnused.golden  ImplicitImportUnused.hs  ImplicitImportUsed.golden  ImportEmpty.hs  MultilineUnused.golden  MultilineUnused.hs  TypeConstructorUnused.golden  TypeConstructorUnused.hs  TypeConstructorUnusedComma.golden  TypeConstructorUnusedComma.hs  TypeConstructorUsed.golden  TypeUnused.golden  TypeUnused.hs  TypeUsed.golden  TypeUsed.hs  WildcardUnused.golden  WildcardUnused.hs  WildcardUsed.golden
