cabal-version:   2.4
name:            smuggler
version:         0.2.0.1
synopsis:        GHC Source Plugin that helps to manage imports
description:
  == Usage
  .
  Add @smuggler@ to the dependencies of your project.
  .
  Then add the following to ghc-options: @-fplugin=Smuggler.Plugin@

homepage:        https://github.com/kowainik/smuggler
bug-reports:     https://github.com/kowainik/smuggler/issues
license:         MPL-2.0
license-file:    LICENSE
author:          Dmitrii Kovanikov, Veronika Romashkina
maintainer:      Kowainik <xrom.xkov@gmail.com>
copyright:       2018-2019 Kowainik
category:        Development, Refactoring
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

tested-with:     GHC ==8.8.3

flag debug
  description: Enable debugging support
  default:     False
  manual:      True

source-repository head
  type:     git
  location: git@github.com:kowainik/smuggler.git

common common-options
  build-depends:      base ^>=4.13
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths

  if flag(debug)
    ghc-options: -ddump-minimal-imports

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Smuggler.Anns
    Smuggler.Loc
    Smuggler.Parser
    Smuggler.Plugin

  if flag(debug)
    exposed-modules:
      Smuggler.Debug
-- Does not compile with 8.8.3      Smuggler.Import
      Smuggler.Name

  build-depends:
    , bytestring            ^>=0.10
    , containers            >=0.5   && <0.7
    , filepath              ^>=1.4
    , ghc                   ^>=8.8.0
    , ghc-exactprint        ^>=0.6
    , hashable              ^>=1.3
    , unordered-containers  ^>=0.2.7

  if flag(debug)
    build-depends:
      , fmt
      , pretty-simple
      , syb
      , text

executable play-smuggler
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  if flag(debug)
    ghc-options: -fplugin=Smuggler.Plugin

  build-depends:  smuggler

test-suite smuggler-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  other-modules:
    Test.BoolBoolUnused
    Test.BoolBoolUsed
    Test.BoolPartlyUsedFirst
    Test.BoolPartlyUsedLast
    Test.ConstructorsUnused
    Test.Dummy
    Test.ImplicitImportUnused
    Test.ImplicitImportUsed
    Test.ImportEmpty
    Test.MultilineUnused
    Test.TypeConstructorUnused
    Test.TypeConstructorUnusedComma
    Test.TypeConstructorUsed
    Test.TypeUnused
    Test.TypeUsed
    Test.WildcardUnused
    Test.WildcardUsed

  build-depends:
    , ansi-terminal
    , directory
    , filepath
    , smuggler

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-imports
    -fno-warn-missing-signatures -fplugin=Smuggler.Plugin
    -fplugin-opt=Smuggler.Plugin:test
