cabal-version:   3.0
name:            smuggler
version:         0.2.1.0
synopsis:        GHC Source Plugin that helps to manage imports
description:
  == Usage
  .
  Add @smuggler@ to the dependencies of your project.
  .
  Then add the following to ghc-options: @-fplugin=Smuggler.Plugin@

homepage:        https://github.com/kowainik/smuggler
bug-reports:     https://github.com/kowainik/smuggler/issues
license:         MPL-2.0
license-file:    LICENSE
author:          Dmitrii Kovanikov, Veronika Romashkina
maintainer:      Kowainik <xrom.xkov@gmail.com>
copyright:       2018-2019 Kowainik
category:        Development, Refactoring
build-type:      Simple
extra-doc-files:
  README.md
  CHANGELOG.md

tested-with:     GHC ==8.8.3

flag debug
  description: Enable debugging support
  default:     False
  manual:      True

source-repository head
  type:     git
  location: git@github.com:kowainik/smuggler.git

common common-options
  build-depends:      base >=4.13
  ghc-options:
    -Wall -Wextra -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths

  if flag(debug)
    ghc-options: -ddump-minimal-imports

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Smuggler.Anns
    Smuggler.Export
    Smuggler.Import
    Smuggler.Loc
    Smuggler.Options
    Smuggler.Parser
    Smuggler.Plugin

  if flag(debug)
    exposed-modules:
      Smuggler.Debug
      Smuggler.Name

  -- Does not compile with 8.8.3      Smuggler.Import
  build-depends:
    , containers      >=0.5   && <0.7
    , filepath        ^>=1.4
    , ghc             >=8.8.0
    -- for GHC 8.10:
    , ghc-api-compat
    , ghc-exactprint  ^>=0.6
    , syb

  if flag(debug)
    build-depends:
      , fmt
      , pretty-simple
      , text

executable play-smuggler
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  if flag(debug)
    ghc-options: -fplugin=Smuggler.Plugin

  build-depends:  smuggler

common common-tests
  import:         common-options
  hs-source-dirs: test
  other-modules:
    --Test.BoolBoolUnused
    --Test.BoolBoolUsed
    --Test.BoolPartlyUsedFirst
    --Test.BoolPartlyUsedLast
    --Test.ConstructorsUnused
    --Test.Dummy
    --Test.ExportExplicit
    --Test.ExportImplicit
    Test.ImplicitImportUnused
    --Test.ImplicitImportUsed
    --Test.ImportEmpty
    --Test.MultilineUnused
    --Test.TypeConstructorUnused
    --Test.TypeConstructorUnusedComma
    --Test.TypeConstructorUsed
    --Test.TypeUnused
    --Test.TypeUsed
    --Test.WildcardUnused

  build-depends:
    , ansi-terminal
    , directory
    , filepath
    , smuggler

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-imports
    -fno-warn-missing-signatures -fplugin=Smuggler.Plugin
    -fplugin-opt=Smuggler.Plugin:test

test-suite smuggler-test
  import:  common-tests
  type:    exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options:
    -fplugin-opt=Smuggler.Plugin:test
 --   -fplugin-opt=Smuggler.Plugin:NoExportProcessing
 --    -fplugin-opt=Smuggler.Plugin:MinimiseImports

test-suite smuggler-test-maximal
  import:  common-tests
  type:    exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options:
    -fplugin-opt=Smuggler.Plugin:test
    -fplugin-opt=Smuggler.Plugin:MinimiseImports
--    -fplugin-opt=Smuggler.Plugin:ReplaceExports
